Make all text white, to ensure correct colour contrast
Resolves: https://trello.com/c/ZpypHwAa/526-fix-banner-styling

--- a/assets/css/partials/banner.scss
+++ b/assets/css/partials/banner.scss
@@ -19,16 +19,9 @@
     margin-bottom: 5px;
   }
 
-  h3 {
-    margin-top: 0;
-    margin-left: 20px;
-    @include govuk-font(19);
-    margin-bottom: 0;
-  }
-
   p {
-    margin: 0 0 0 20px;
-    @include govuk-font(16);
+    margin: 0 0 10px 20px;
+    color: $white;
 
     a {
       &:link,
